--- a/project-v1.0.0/src/index.css
+++ b/project-v1.0.0/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  background: #b2cdb2 !important;
+  margin: 3;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
